# webtrip

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE_MIT  README.md  api-example.html  codecov.yml  index.html  package-lock.json  package.json  rust-toolchain.toml  server.js  tsconfig.json  webdriver.json
.cursor/rules/: jacktrip-api.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTAINER.md  CURSOR_CLOUD.md  TESTING_PLAN.md  WASM_TESTING.md
docs/api/: README.md  api-client.md  billing.md  devices.md  error-handling.md  events.md  getting-started.md  recordings.md  streams.md  studios.md  system.md  users.md
scripts/: integration-coverage-report.sh  wasm-browser-env.sh
src/: app.ts  audio_devices.rs  audio_engine.rs  audio_params.rs  audio_processor.rs  lib.rs  session.rs  test_support.rs  worklet.js
src/api/: billing.rs  devices.rs  events.rs  mod.rs  recordings.rs  streams.rs  studios.rs  subscriptions.rs  system.rs  test_helpers.rs  tracks.rs  users.rs
src/audio/: audio_callback_loop.rs  client.rs  devices.rs  engine.rs  jitter_buffer.rs  mock_transport.rs  mod.rs  params.rs  processor.rs  protocol.rs  regulator.rs  ring_buffer.rs  signaling.rs  transport.rs  webrtc.rs  webtransport.rs  webtransport_worker.js  webtransport_worker.rs  worklet.js  worklet.rs
src/models/: billing.rs  chat.rs  common.rs  device.rs  event.rs  mod.rs  pagination.rs  recording.rs  region.rs  requests.rs  responses.rs  stream.rs  studio.rs  subscription.rs  test_utils.rs  user.rs
tests/: wasm_harness.rs
tests/integration/: docker-compose.integration.yml  run.mjs
