[package]
authors = ["JackTrip Contributors"]
edition = "2021"
name = "jacktrip-web"
description = "JackTrip audio streaming over WebRTC"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"

# API client dependencies
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
serde_repr = "0.1"  # For numeric enum serialization
url = "2.5"
tsify-next = { version = "0.5", features = ["js"] }  # TypeScript type generation

web-sys = { version = "0.3.83", features = [
  # AudioContext and worklet
  "AudioContext",
  "AudioContextOptions",
  "AudioDestinationNode",
  "AudioNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "ChannelCountMode",
  "MessagePort",
  
  # MediaDevices API
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "MediaDevices",
  "MediaStream",
  "MediaStreamAudioSourceNode",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  
  # For dependent_module (worklet.js loading)
  "Blob",
  "BlobPropertyBag",
  "Url",
  
  # Browser APIs
  "Navigator",
  "Window",
  
  # WebRTC for JackTrip protocol
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcDataChannelState",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcSignalingState",
  "RtcIceServer",
  
  # For binary data handling
  "Crypto",
  "MessageEvent",
  
  # WebSocket for signaling
  "WebSocket",
  "BinaryType",
  
  # RTC events
  "RtcTrackEvent",
] }
