[package]
authors = ["Mike Dickey"]
edition = "2021"
name = "webtrip"
description = "Rust rewrite of JackTrip for audio in web browsers"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"

# API client dependencies
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
serde_repr = "0.1"  # For numeric enum serialization
url = "2.5"
tsify-next = { version = "0.5", features = ["js"] }  # TypeScript type generation

web-sys = { version = "0.3.83", features = [
  # AudioContext and worklet
  "AudioContext",
  "AudioContextOptions",
  "AudioDestinationNode",
  "AudioNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "ChannelCountMode",
  "MessagePort",
  
  # MediaDevices API
  "MediaDeviceInfo",
  "MediaDeviceKind",
  "MediaDevices",
  "MediaStream",
  "MediaStreamAudioSourceNode",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  
  # For dependent_module (worklet.js loading)
  "Blob",
  "BlobPropertyBag",
  "Url",
  
  # Browser APIs
  "Navigator",
  "Window",
  "console",
  "CloseEvent",
  "CloseEventInit",
  "Event",
  "ErrorEvent",
  
  # WebRTC for JackTrip protocol
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcDataChannelState",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcSignalingState",
  "RtcIceServer",
  
  # For binary data handling
  "Crypto",
  "MessageEvent",
  "MessageEventInit",
  
  # WebSocket for signaling
  "WebSocket",
  "BinaryType",
  
  # RTC events
  "RtcTrackEvent",
  
  # Worker API for WebTransport dedicated thread
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "DedicatedWorkerGlobalScope",
  
  # WebTransport API (Chrome 97+, Edge 97+)
  "WebTransport",
  "WebTransportBidirectionalStream",
  "WebTransportCloseInfo",
  "WebTransportCongestionControl",
  "WebTransportDatagramDuplexStream",
  "WebTransportError",
  "WebTransportErrorOptions",
  "WebTransportErrorSource",
  "WebTransportHash",
  "WebTransportOptions",
  "WebTransportReceiveStream",
  "WebTransportSendStream",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "WritableStream",
  "WritableStreamDefaultWriter",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockito = "1.7.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
